impro: Renamed project to TritiumEngine

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 # Project settings
 cmake_minimum_required(VERSION 3.8)
-project(Tritium3D LANGUAGES CXX)
+project(TritiumEngine LANGUAGES CXX)
 
 # C++ settings
 set(CMAKE_CXX_STANDARD 20)
@@ -8,12 +8,12 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 # Build options
 option(GIT_SUBMODULE "Check submodules during build" ON)
-option(TRITIUM3D_BUILD_APPS "Build example applications" ON)
-option(TRITIUM3D_BUILD_DOCS "Generate documentation" ON)
+option(TRITIUM_BUILD_APPS "Build example applications" ON)
+option(TRITIUM_BUILD_DOCS "Generate documentation" ON)
 
 # Directories
-set(TRITIUM3D_INC_DIR ${PROJECT_SOURCE_DIR}/inc)
-set(TRITIUM3D_SRC_DIR ${PROJECT_SOURCE_DIR}/src)
+set(TRITIUM_INC_DIR ${PROJECT_SOURCE_DIR}/inc)
+set(TRITIUM_SRC_DIR ${PROJECT_SOURCE_DIR}/src)
 set(APPS_DIR ${PROJECT_SOURCE_DIR}/apps)
 set(DOCS_DIR ${PROJECT_SOURCE_DIR}/docs)
 set(THIRDPARTY_DIR ${PROJECT_SOURCE_DIR}/thirdparty)
@@ -50,23 +50,23 @@ add_subdirectory(${THIRDPARTY_DIR}/glfw)
 add_subdirectory(${THIRDPARTY_DIR}/glm)
 
 # Add generation of documentation
-if (TRITIUM3D_BUILD_DOCS)
+if (TRITIUM_BUILD_DOCS)
     find_package(Doxygen)
     add_subdirectory(${DOCS_DIR})
 endif()
 
 
-# Setup Tritium3D project library
-file(GLOB_RECURSE TRITIUM3D_INC_FILES "${TRITIUM3D_INC_DIR}/*.hpp")
-file(GLOB_RECURSE TRITIUM3D_SRC_FILES "${TRITIUM3D_SRC_DIR}/*.cpp")
+# Setup TritiumEngine project library
+file(GLOB_RECURSE TRITIUM_INC_FILES "${TRITIUM_INC_DIR}/*.hpp")
+file(GLOB_RECURSE TRITIUM_SRC_FILES "${TRITIUM_SRC_DIR}/*.cpp")
 
-add_library(tritium3d ${TRITIUM3D_SRC_FILES} ${TRITIUM3D_INC_FILES})
+add_library(TritiumEngine ${TRITIUM_SRC_FILES} ${TRITIUM_INC_FILES})
 
-target_include_directories(tritium3d PUBLIC ${TRITIUM3D_INC_DIR})
+target_include_directories(TritiumEngine PUBLIC ${TRITIUM_INC_DIR})
 
-target_link_libraries(tritium3d PRIVATE glm glfw libglew_static)
+target_link_libraries(TritiumEngine PRIVATE glm glfw libglew_static)
 
 # Add example apps
-if (TRITIUM3D_BUILD_APPS)
+if (TRITIUM_BUILD_APPS)
     add_subdirectory(${APPS_DIR})
 endif()
