feat: Integrated EnTT into project for ECS capabilities. Made use of EnTT for handling components and systems. A lot of other wide ranging changes to use more forward declarations, style changes and refactors

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "thirdparty/headers"]
 	path = thirdparty/headers
 	url = git@github.com:PranavBahuguna/TritiumEngine-ThirdPartyHeaders.git
+[submodule "thirdparty/entt"]
+	path = thirdparty/entt
+	url = https://github.com/skypjack/entt
