--- a/apps/FallingSquares/CMakeLists.txt
+++ b/apps/FallingSquares/CMakeLists.txt
@@ -1,5 +1,5 @@
-add_executable(FallingSquares Main.cpp Square.hpp Square.cpp)
+add_executable(FallingSquares Main.cpp)
 
-target_link_libraries(FallingSquares PRIVATE TritiumEngine glm glfw libglew_static)
+target_link_libraries(FallingSquares PRIVATE TritiumEngine glm glfw libglew_static EnTT)
 
 copy_resources(FallingSquares)
