refactor: Refactored rendering benchmark code to be structured more uniformly, split off defines into a separate config file

--- a/apps/RenderingBenchmark/CMakeLists.txt
+++ b/apps/RenderingBenchmark/CMakeLists.txt
@@ -1,6 +1,12 @@
-file(GLOB_RECURSE RENDERING_BENCHMARK_FILES "${CMAKE_CURRENT_SOURCE_DIR}/*.cpp" "${CMAKE_CURRENT_SOURCE_DIR}/*.hpp")
+# Directories
+set(RENDERING_BENCHMARK_INC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/inc)
+set(RENDERING_BENCHMARK_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/src)
+
+file(GLOB_RECURSE RENDERING_BENCHMARK_FILES "${RENDERING_BENCHMARK_SRC_DIR}/*.cpp" "${RENDERING_BENCHMARK_INC_DIR}/*.hpp")
 
 add_executable(RenderingBenchmark ${RENDERING_BENCHMARK_FILES})
+
+target_include_directories(RenderingBenchmark PUBLIC ${RENDERING_BENCHMARK_INC_DIR})
 
 target_link_libraries(RenderingBenchmark
   PRIVATE TritiumEngine glm glfw libglew_static EnTT)
