--- a/apps/RenderingBenchmark/CMakeLists.txt
+++ b/apps/RenderingBenchmark/CMakeLists.txt
@@ -5,6 +5,6 @@ add_executable(RenderingBenchmark ${RENDERING_BENCHMARK_FILES})
 target_include_directories(RenderingBenchmark PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
 
 target_link_libraries(RenderingBenchmark
-  PRIVATE TritiumEngine glm glfw libglew_static EnTT)
+  PRIVATE TritiumEngine glm glfw libglew_static EnTT freetype)
 
 copy_resources(RenderingBenchmark)
