refactor: Performed some cleanup with header and variable standardisation. CmakeLists for apps now creates a symlink to Resources directory rather than copying the whole directory.

--- a/apps/CMakeLists.txt
+++ b/apps/CMakeLists.txt
@@ -1,13 +1,10 @@
-# Function for copying resources over to build
-function(copy_resources APP_NAME)
-    set(COPY_RESOURCES_TARGET copy_resouces_${APP_NAME})
-    add_custom_target(${COPY_RESOURCES_TARGET} ALL
-        COMMAND ${CMAKE_COMMAND} -E copy_directory
+# Function for creating a symlink to source Resources folder
+function(link_resources APP_NAME)
+    add_custom_target(link_target ALL
+        COMMAND ${CMAKE_COMMAND} -E create_symlink
         ${PROJECT_SOURCE_DIR}/Apps/${APP_NAME}/Resources
         ${PROJECT_BINARY_DIR}/Apps/${APP_NAME}/Resources
-        COMMENT "Copying resources into binary directory")
-
-    add_dependencies(${APP_NAME} ${COPY_RESOURCES_TARGET})
+        COMMENT "Linking resources from binary to source directory")
 endfunction()
 
 # Add example applications
