--- a/apps/RenderingBenchmark/CMakeLists.txt
+++ b/apps/RenderingBenchmark/CMakeLists.txt
@@ -7,4 +7,4 @@ target_include_directories(RenderingBenchmark PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
 target_link_libraries(RenderingBenchmark
   PRIVATE TritiumEngine glm glfw libglew_static EnTT freetype)
 
-copy_resources(RenderingBenchmark)
+link_resources(RenderingBenchmark)
