--- a/.gitmodules
+++ b/.gitmodules
@@ -9,7 +9,7 @@
 	url = https://github.com/g-truc/glm.git
 [submodule "thirdparty/headers"]
 	path = thirdparty/headers
-	url = git@github.com:PranavBahuguna/TritiumEngine-ThirdPartyHeaders.git
+	url = https://github.com/PranavBahuguna/TritiumEngine-ThirdPartyHeaders.git
 [submodule "thirdparty/entt"]
 	path = thirdparty/entt
 	url = https://github.com/skypjack/entt
